[package]
name = "wisecondorx-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wisecondorx_rs"
crate-type = ["cdylib"]

[dependencies]
noodles = { version = "0.86.0", features = ["bam", "cram", "sam", "bgzf", "fasta", "core"] }
numpy = "0.22"
pyo3 = { version = "0.22", features = ["extension-module"] }
anyhow = "1.0"
rayon = "1.11.0"
